--- a/Delivery_Performance.ipynb
+++ b/Delivery_Performance.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "730a89d7-bad2-4d19-9302-64712628f620",
    "metadata": {
     "tags": []
@@ -75,6 +75,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>LOAD_ID</th>\n",
        "      <th>BOOKING_DT</th>\n",
        "      <th>BOOKING_TM</th>\n",
        "      <th>ORIG</th>\n",
@@ -84,7 +85,6 @@
        "      <th>PKUP_END_TM</th>\n",
        "      <th>PKUP_ARRIVAL_ACT_DT</th>\n",
        "      <th>PKUP_ARRIVAL_ACT_TM</th>\n",
-       "      <th>PKUP_DEPARTURE_ACT_DT</th>\n",
        "      <th>...</th>\n",
        "      <th>DEST</th>\n",
        "      <th>DLVERY_ST_DT</th>\n",
@@ -101,6 +101,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>20200903</td>\n",
        "      <td>1312</td>\n",
        "      <td>2075615</td>\n",
@@ -110,7 +111,6 @@
        "      <td>700</td>\n",
        "      <td>20200905</td>\n",
        "      <td>1015</td>\n",
-       "      <td>20200905</td>\n",
        "      <td>...</td>\n",
        "      <td>1047897</td>\n",
        "      <td>20200909</td>\n",
@@ -125,6 +125,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>2</td>\n",
        "      <td>20201001</td>\n",
        "      <td>845</td>\n",
        "      <td>2059975</td>\n",
@@ -134,7 +135,6 @@
        "      <td>1100</td>\n",
        "      <td>20201002</td>\n",
        "      <td>907</td>\n",
-       "      <td>20201002</td>\n",
        "      <td>...</td>\n",
        "      <td>659549</td>\n",
        "      <td>20201005</td>\n",
@@ -149,6 +149,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>3</td>\n",
        "      <td>20210216</td>\n",
        "      <td>1411</td>\n",
        "      <td>1041675</td>\n",
@@ -158,7 +159,6 @@
        "      <td>2000</td>\n",
        "      <td>20210226</td>\n",
        "      <td>1520</td>\n",
-       "      <td>20210226</td>\n",
        "      <td>...</td>\n",
        "      <td>1135821</td>\n",
        "      <td>20210310</td>\n",
@@ -173,6 +173,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>4</td>\n",
        "      <td>20200524</td>\n",
        "      <td>1000</td>\n",
        "      <td>1128953</td>\n",
@@ -182,7 +183,6 @@
        "      <td>2000</td>\n",
        "      <td>20200527</td>\n",
        "      <td>1334</td>\n",
-       "      <td>20200527</td>\n",
        "      <td>...</td>\n",
        "      <td>992647</td>\n",
        "      <td>20200601</td>\n",
@@ -197,6 +197,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>5</td>\n",
        "      <td>20200529</td>\n",
        "      <td>1458</td>\n",
        "      <td>1308541</td>\n",
@@ -206,7 +207,6 @@
        "      <td>1100</td>\n",
        "      <td>20200605</td>\n",
        "      <td>1008</td>\n",
-       "      <td>20200605</td>\n",
        "      <td>...</td>\n",
        "      <td>679813</td>\n",
        "      <td>20200608</td>\n",
@@ -221,37 +221,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 21 columns</p>\n",
+       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   BOOKING_DT  BOOKING_TM     ORIG  PKUP_ST_DT  PKUP_ST_TM  PKUP_END_DT  \\\n",
-       "0    20200903        1312  2075615    20200905         700     20200905   \n",
-       "1    20201001         845  2059975    20201002        1100     20201002   \n",
-       "2    20210216        1411  1041675    20210226         830     20210226   \n",
-       "3    20200524        1000  1128953    20200526         700     20200527   \n",
-       "4    20200529        1458  1308541    20200605        1100     20200605   \n",
+       "   LOAD_ID  BOOKING_DT  BOOKING_TM     ORIG  PKUP_ST_DT  PKUP_ST_TM  \\\n",
+       "0        1    20200903        1312  2075615    20200905         700   \n",
+       "1        2    20201001         845  2059975    20201002        1100   \n",
+       "2        3    20210216        1411  1041675    20210226         830   \n",
+       "3        4    20200524        1000  1128953    20200526         700   \n",
+       "4        5    20200529        1458  1308541    20200605        1100   \n",
        "\n",
-       "   PKUP_END_TM PKUP_ARRIVAL_ACT_DT PKUP_ARRIVAL_ACT_TM PKUP_DEPARTURE_ACT_DT  \\\n",
-       "0          700            20200905                1015              20200905   \n",
-       "1         1100            20201002                 907              20201002   \n",
-       "2         2000            20210226                1520              20210226   \n",
-       "3         2000            20200527                1334              20200527   \n",
-       "4         1100            20200605                1008              20200605   \n",
+       "   PKUP_END_DT  PKUP_END_TM PKUP_ARRIVAL_ACT_DT PKUP_ARRIVAL_ACT_TM  ...  \\\n",
+       "0     20200905          700            20200905                1015  ...   \n",
+       "1     20201002         1100            20201002                 907  ...   \n",
+       "2     20210226         2000            20210226                1520  ...   \n",
+       "3     20200527         2000            20200527                1334  ...   \n",
+       "4     20200605         1100            20200605                1008  ...   \n",
        "\n",
-       "   ...     DEST DLVERY_ST_DT  DLVERY_ST_TM  DLVERY_END_DT  DLVERY_END_TM  \\\n",
-       "0  ...  1047897     20200909             1       20200910            130   \n",
-       "1  ...   659549     20201005          1800       20201005           1800   \n",
-       "2  ...  1135821     20210310          1700       20210310           1700   \n",
-       "3  ...   992647     20200601          1100       20200601           1100   \n",
-       "4  ...   679813     20200608          1200       20200608           1200   \n",
+       "      DEST DLVERY_ST_DT DLVERY_ST_TM  DLVERY_END_DT  DLVERY_END_TM  \\\n",
+       "0  1047897     20200909            1       20200910            130   \n",
+       "1   659549     20201005         1800       20201005           1800   \n",
+       "2  1135821     20210310         1700       20210310           1700   \n",
+       "3   992647     20200601         1100       20200601           1100   \n",
+       "4   679813     20200608         1200       20200608           1200   \n",
        "\n",
-       "   DLVERY_ARRIVAL_ACT_DT DLVERY_ARRIVAL_ACT_TM DLVERY_DEPARTURE_ACT_DT  \\\n",
-       "0               20200910                   102                20200910   \n",
-       "1               20201005                  1106                20201005   \n",
-       "2               20210310                  1532                20210310   \n",
-       "3               20200601                  1040                20200601   \n",
-       "4               20200608                  1200                20200608   \n",
+       "   DLVERY_ARRIVAL_ACT_DT  DLVERY_ARRIVAL_ACT_TM DLVERY_DEPARTURE_ACT_DT  \\\n",
+       "0               20200910                    102                20200910   \n",
+       "1               20201005                   1106                20201005   \n",
+       "2               20210310                   1532                20210310   \n",
+       "3               20200601                   1040                20200601   \n",
+       "4               20200608                   1200                20200608   \n",
        "\n",
        "  DLVERY_DEPARTURE_ACT_TM MILEAGE  \n",
        "0                     352    1034  \n",
@@ -260,10 +260,10 @@
        "3                    1548     799  \n",
        "4                    1200    1365  \n",
        "\n",
-       "[5 rows x 21 columns]"
+       "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
     "print(f\"Total number of columns: {len(combined_df.columns)}\")\n",
     "print(\"\\nFirst 5 rows of data:\")\n",
     "\n",
-    "combined_df = combined_df.drop(combined_df.columns[0], axis=1)\n",
+    "#combined_df = combined_df.drop(combined_df.columns[0], axis=1)\n",
     "combined_df.head()"
    ]
   },
@@ -304,7 +304,24 @@
    "id": "c124e814-8a52-411c-b0bf-37e1325c8a3b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Explore the Data\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# Title: Initial Data Exploration\n",
+    "# Description: Look at the structure and content of our data\n",
+    "\n",
+    "# Show column names\n",
+    "print(\"Column Names:\")\n",
+    "print(df.columns.tolist())\n",
+    "\n",
+    "# Show data types\n",
+    "print(\"\\nData Types:\")\n",
+    "print(df.dtypes)\n",
+    "\n",
+    "# Check for missing values\n",
+    "print(\"\\nMissing Values Count:\")\n",
+    "print(df.isnull().sum())"
+   ]
   }
  ],
  "metadata": {
