pushing more notebook work

--- a/Delivery_Performance.ipynb
+++ b/Delivery_Performance.ipynb
@@ -300,28 +300,190 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "c124e814-8a52-411c-b0bf-37e1325c8a3b",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column Names:\n",
+      "['LOAD_ID', 'BOOKING_DT', 'BOOKING_TM', 'ORIG', 'PKUP_ST_DT', 'PKUP_ST_TM', 'PKUP_END_DT', 'PKUP_END_TM', 'PKUP_ARRIVAL_ACT_DT', 'PKUP_ARRIVAL_ACT_TM', 'PKUP_DEPARTURE_ACT_DT', 'PKUP_DEPARTURE_ACT_TM', 'DEST', 'DLVERY_ST_DT', 'DLVERY_ST_TM', 'DLVERY_END_DT', 'DLVERY_END_TM', 'DLVERY_ARRIVAL_ACT_DT', 'DLVERY_ARRIVAL_ACT_TM', 'DLVERY_DEPARTURE_ACT_DT', 'DLVERY_DEPARTURE_ACT_TM', 'MILEAGE']\n",
+      "\n",
+      "Data Types:\n",
+      "LOAD_ID                     int64\n",
+      "BOOKING_DT                  int64\n",
+      "BOOKING_TM                  int64\n",
+      "ORIG                        int64\n",
+      "PKUP_ST_DT                  int64\n",
+      "PKUP_ST_TM                  int64\n",
+      "PKUP_END_DT                 int64\n",
+      "PKUP_END_TM                 int64\n",
+      "PKUP_ARRIVAL_ACT_DT        object\n",
+      "PKUP_ARRIVAL_ACT_TM        object\n",
+      "PKUP_DEPARTURE_ACT_DT      object\n",
+      "PKUP_DEPARTURE_ACT_TM      object\n",
+      "DEST                       object\n",
+      "DLVERY_ST_DT                int64\n",
+      "DLVERY_ST_TM                int64\n",
+      "DLVERY_END_DT               int64\n",
+      "DLVERY_END_TM               int64\n",
+      "DLVERY_ARRIVAL_ACT_DT      object\n",
+      "DLVERY_ARRIVAL_ACT_TM      object\n",
+      "DLVERY_DEPARTURE_ACT_DT    object\n",
+      "DLVERY_DEPARTURE_ACT_TM    object\n",
+      "MILEAGE                     int64\n",
+      "dtype: object\n",
+      "\n",
+      "Missing Values Count:\n",
+      "LOAD_ID                    0\n",
+      "BOOKING_DT                 0\n",
+      "BOOKING_TM                 0\n",
+      "ORIG                       0\n",
+      "PKUP_ST_DT                 0\n",
+      "PKUP_ST_TM                 0\n",
+      "PKUP_END_DT                0\n",
+      "PKUP_END_TM                0\n",
+      "PKUP_ARRIVAL_ACT_DT        0\n",
+      "PKUP_ARRIVAL_ACT_TM        0\n",
+      "PKUP_DEPARTURE_ACT_DT      0\n",
+      "PKUP_DEPARTURE_ACT_TM      0\n",
+      "DEST                       0\n",
+      "DLVERY_ST_DT               0\n",
+      "DLVERY_ST_TM               0\n",
+      "DLVERY_END_DT              0\n",
+      "DLVERY_END_TM              0\n",
+      "DLVERY_ARRIVAL_ACT_DT      0\n",
+      "DLVERY_ARRIVAL_ACT_TM      0\n",
+      "DLVERY_DEPARTURE_ACT_DT    0\n",
+      "DLVERY_DEPARTURE_ACT_TM    0\n",
+      "MILEAGE                    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "#Explore the Data\n",
+    "#Exploring the Data\n",
     "# ----------------------------------------------------------------------------\n",
-    "# Title: Initial Data Exploration\n",
-    "# Description: Look at the structure and content of our data\n",
+    "# Initial Data Exploration\n",
+    "# Looking at the structure and content of our data\n",
     "\n",
     "# Show column names\n",
     "print(\"Column Names:\")\n",
-    "print(df.columns.tolist())\n",
+    "print(combined_df.columns.tolist())\n",
     "\n",
     "# Show data types\n",
     "print(\"\\nData Types:\")\n",
-    "print(df.dtypes)\n",
+    "print(combined_df.dtypes)\n",
     "\n",
     "# Check for missing values\n",
     "print(\"\\nMissing Values Count:\")\n",
-    "print(df.isnull().sum())"
+    "print(combined_df.isnull().sum())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "87a377f3-5751-4216-92e7-f1a1161ef90a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ All datetime columns created successfully!\n",
+      "\n",
+      "Example of converted datetime:\n",
+      "First delivery actual arrival: 2020-09-10 01:02:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Converting Date and Time Columns\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# Converting Dates and Times to DateTime Format\n",
+    "# Combining date and time columns into proper datetime objects\n",
+    "\n",
+    "# Booking datetime\n",
+    "combined_df['booking_datetime'] = pd.to_datetime(\n",
+    "    combined_df['BOOKING_DT'].astype(str) + ' ' + combined_df['BOOKING_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Pickup start datetime\n",
+    "combined_df['pickup_start_datetime'] = pd.to_datetime(\n",
+    "    combined_df['PKUP_ST_DT'].astype(str) + ' ' + combined_df['PKUP_ST_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Pickup end datetime\n",
+    "combined_df['pickup_end_datetime'] = pd.to_datetime(\n",
+    "    combined_df['PKUP_END_DT'].astype(str) + ' ' + combined_df['PKUP_END_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Pickup actual arrival\n",
+    "combined_df['pickup_arrival_actual'] = pd.to_datetime(\n",
+    "    combined_df['PKUP_ARRIVAL_ACT_DT'].astype(str) + ' ' + combined_df['PKUP_ARRIVAL_ACT_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Pickup actual departure\n",
+    "combined_df['pickup_departure_actual'] = pd.to_datetime(\n",
+    "    combined_df['PKUP_DEPARTURE_ACT_DT'].astype(str) + ' ' + combined_df['PKUP_DEPARTURE_ACT_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Delivery start datetime\n",
+    "combined_df['delivery_start_datetime'] = pd.to_datetime(\n",
+    "    combined_df['DLVERY_ST_DT'].astype(str) + ' ' + combined_df['DLVERY_ST_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Delivery end datetime (this is our deadline!)\n",
+    "combined_df['delivery_end_datetime'] = pd.to_datetime(\n",
+    "    combined_df['DLVERY_END_DT'].astype(str) + ' ' + combined_df['DLVERY_END_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Delivery actual arrival\n",
+    "combined_df['delivery_arrival_actual'] = pd.to_datetime(\n",
+    "    combined_df['DLVERY_ARRIVAL_ACT_DT'].astype(str) + ' ' + combined_df['DLVERY_ARRIVAL_ACT_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "# Delivery actual departure\n",
+    "combined_df['delivery_departure_actual'] = pd.to_datetime(\n",
+    "    combined_df['DLVERY_DEPARTURE_ACT_DT'].astype(str) + ' ' + combined_df['DLVERY_DEPARTURE_ACT_TM'].astype(str).str.zfill(4),\n",
+    "    format='%Y%m%d %H%M',\n",
+    "    errors='coerce'\n",
+    ")\n",
+    "\n",
+    "print(\"✓ All datetime columns created successfully!\")\n",
+    "print(f\"\\nExample of converted datetime:\")\n",
+    "print(f\"First delivery actual arrival: {combined_df['delivery_arrival_actual'].iloc[0]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d596509-11f1-40c1-bb6c-e880479e0650",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
