--- a/Delivery_Performance.ipynb
+++ b/Delivery_Performance.ipynb
@@ -479,8 +479,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7d596509-11f1-40c1-bb6c-e880479e0650",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rows before cleaning: 59529\n",
+      "Rows after cleaning: 59100\n",
+      "Rows removed: 429\n",
+      "\n",
+      "✓ Data cleaning complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    " # Cleaning the Data\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# Removing Records with Missing Delivery Data\n",
+    "# We need complete delivery information for our analysis\n",
+    "\n",
+    "# Count rows before cleaning\n",
+    "rows_before = len(combined_df)\n",
+    "\n",
+    "# Remove rows where we don't have delivery arrival or delivery end time\n",
+    "combined_df = combined_df.dropna(subset=['delivery_arrival_actual', 'delivery_end_datetime'])\n",
+    "\n",
+    "# Count rows after cleaning\n",
+    "rows_after = len(combined_df)\n",
+    "rows_removed = rows_before - rows_after\n",
+    "\n",
+    "print(f\"Rows before cleaning: {rows_before}\")\n",
+    "print(f\"Rows after cleaning: {rows_after}\")\n",
+    "print(f\"Rows removed: {rows_removed}\")\n",
+    "print(\"\\n✓ Data cleaning complete!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0c3a3458-aa95-47ea-bd0b-279e16489a14",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Performance metrics calculated!\n",
+      "\n",
+      "Example for first load:\n",
+      "Delivery delay: -0.47 hours\n",
+      "On time? True\n",
+      "Pickup dwell time: 3.37 hours\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculating Key Metrics\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# Calculating Performance Metrics\n",
+    "# Creating columns for delivery delay and on-time status\n",
+    "\n",
+    "# Calculating delivery delay in hours\n",
+    "# Negative = early, Positive = late\n",
+    "combined_df['delivery_delay_hours'] = (combined_df['delivery_arrival_actual'] - combined_df['delivery_end_datetime']).dt.total_seconds() / 3600\n",
+    "\n",
+    "# Determine if delivery was on time (True/False)\n",
+    "# On time = arrived before or at the end of the delivery window\n",
+    "combined_df['is_on_time'] = combined_df['delivery_delay_hours'] <= 0\n",
+    "\n",
+    "# Calculate pickup dwell time (time spent at pickup location)\n",
+    "combined_df['pickup_dwell_hours'] = (combined_df['pickup_departure_actual'] - combined_df['pickup_arrival_actual']).dt.total_seconds() / 3600\n",
+    "\n",
+    "print(\"✓ Performance metrics calculated!\")\n",
+    "print(f\"\\nExample for first load:\")\n",
+    "print(f\"Delivery delay: {combined_df['delivery_delay_hours'].iloc[0]:.2f} hours\")\n",
+    "print(f\"On time? {combined_df['is_on_time'].iloc[0]}\")\n",
+    "print(f\"Pickup dwell time: {combined_df['pickup_dwell_hours'].iloc[0]:.2f} hours\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c808d232-b4c8-46a8-bb67-6dcb48a1acba",
    "metadata": {},
    "outputs": [],
    "source": []
