--- a/Delivery_Performance.ipynb
+++ b/Delivery_Performance.ipynb
@@ -1067,8 +1067,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3797af48-264c-45a0-ae68-ba7c80a8a35e",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "RUNNING DIAGNOSTIC TEST\n",
+      "============================================================\n",
+      "\n",
+      "Assumptions:\n",
+      "  • Driver arrives at pickup at START of window\n",
+      "  • Dwell time = 90th percentile for that origin\n",
+      "  • Travel speed = 40 mph\n",
+      "\n",
+      "============================================================\n",
+      "DIAGNOSTIC TEST RESULTS\n",
+      "============================================================\n",
+      "\n",
+      "Total loads tested: 11\n",
+      "Would be on-time with optimal execution: 11 (100.0%)\n",
+      "Would still be late: 0 (0.0%)\n",
+      "\n",
+      "Average time difference: -2.83 hours\n",
+      "Median time difference: -1.38 hours\n",
+      "  (Negative = would arrive early, Positive = would arrive late)\n",
+      "\n",
+      "============================================================\n",
+      "CONCLUSION:\n",
+      "============================================================\n",
+      "✓ Delivery windows appear REALISTIC\n",
+      "  Most loads could meet the window with optimal execution.\n",
+      "  Problem likely lies in operational execution, not window design.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Running Diagnostic Test\n",
+    "# ----------------------------------------------------------------------------\n",
+    "# Run the Diagnostic Test\n",
+    "# Description: Simulating optimal delivery times and compare to proposed windows\n",
+    "\n",
+    "# Assumptions for the test\n",
+    "TRAVEL_SPEED = 40  # miles per hour\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 60)\n",
+    "print(\"RUNNING DIAGNOSTIC TEST\")\n",
+    "print(\"=\" * 60)\n",
+    "print(f\"\\nAssumptions:\")\n",
+    "print(f\"  • Driver arrives at pickup at START of window\")\n",
+    "print(f\"  • Dwell time = 90th percentile for that origin\")\n",
+    "print(f\"  • Travel speed = {TRAVEL_SPEED} mph\")\n",
+    "\n",
+    "# Run the diagnostic test for each load\n",
+    "results = []\n",
+    "\n",
+    "for idx, load in worst_location_data.iterrows():\n",
+    "    # Step 1: Start at pickup window start time\n",
+    "    optimal_pickup_arrival = load['pickup_start_datetime']\n",
+    "    \n",
+    "    # Step 2: Get 90th percentile dwell time for this origin\n",
+    "    origin = load['ORIG']\n",
+    "    if origin in origin_dwell_p90.index:\n",
+    "        dwell_time = origin_dwell_p90[origin]\n",
+    "    else:\n",
+    "        # If origin not found, use overall 90th percentile\n",
+    "        dwell_time = df['pickup_dwell_hours'].quantile(0.90)\n",
+    "    \n",
+    "    # Step 3: Calculate departure time from pickup\n",
+    "    optimal_pickup_departure = optimal_pickup_arrival + timedelta(hours=dwell_time)\n",
+    "    \n",
+    "    # Step 4: Calculate travel time\n",
+    "    mileage = load['MILEAGE']\n",
+    "    travel_hours = mileage / TRAVEL_SPEED\n",
+    "    \n",
+    "    # Step 5: Calculate optimal delivery arrival\n",
+    "    optimal_delivery_arrival = optimal_pickup_departure + timedelta(hours=travel_hours)\n",
+    "    \n",
+    "    # Step 6: Compare to proposed delivery window end\n",
+    "    delivery_window_end = load['delivery_end_datetime']\n",
+    "    time_difference_hours = (optimal_delivery_arrival - delivery_window_end).total_seconds() / 3600\n",
+    "    \n",
+    "    # Store results\n",
+    "    results.append({\n",
+    "        'LOAD_ID': load['LOAD_ID'],\n",
+    "        'optimal_delivery_arrival': optimal_delivery_arrival,\n",
+    "        'window_end': delivery_window_end,\n",
+    "        'difference_hours': time_difference_hours,\n",
+    "        'would_be_on_time': time_difference_hours <= 0\n",
+    "    })\n",
+    "\n",
+    "# Convert results to DataFrame\n",
+    "diagnostic_df = pd.DataFrame(results)\n",
+    "\n",
+    "# Calculate summary statistics\n",
+    "total_tested = len(diagnostic_df)\n",
+    "would_be_on_time = diagnostic_df['would_be_on_time'].sum()\n",
+    "would_be_on_time_pct = (would_be_on_time / total_tested) * 100\n",
+    "avg_difference = diagnostic_df['difference_hours'].mean()\n",
+    "median_difference = diagnostic_df['difference_hours'].median()\n",
+    "\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(\"DIAGNOSTIC TEST RESULTS\")\n",
+    "print('='*60)\n",
+    "print(f\"\\nTotal loads tested: {total_tested}\")\n",
+    "print(f\"Would be on-time with optimal execution: {would_be_on_time} ({would_be_on_time_pct:.1f}%)\")\n",
+    "print(f\"Would still be late: {total_tested - would_be_on_time} ({100 - would_be_on_time_pct:.1f}%)\")\n",
+    "print(f\"\\nAverage time difference: {avg_difference:.2f} hours\")\n",
+    "print(f\"Median time difference: {median_difference:.2f} hours\")\n",
+    "print(f\"  (Negative = would arrive early, Positive = would arrive late)\")\n",
+    "\n",
+    "print(f\"\\n{'='*60}\")\n",
+    "print(\"CONCLUSION:\")\n",
+    "print('='*60)\n",
+    "if would_be_on_time_pct >= 80:\n",
+    "    print(\"✓ Delivery windows appear REALISTIC\")\n",
+    "    print(\"  Most loads could meet the window with optimal execution.\")\n",
+    "    print(\"  Problem likely lies in operational execution, not window design.\")\n",
+    "else:\n",
+    "    print(\"✗ Delivery windows appear UNREALISTIC\")\n",
+    "    print(\"  Even with perfect execution, many loads cannot meet windows.\")\n",
+    "    print(\"  Recommend reviewing and adjusting delivery time windows.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21142fe0-c62c-4e54-9c63-c1f23dd23095",
    "metadata": {},
    "outputs": [],
    "source": []
